--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@
 .container,
 .header,
 .sidebar,
-.main-content {
+.main-content,
+.searchbar {
     display: grid;
-    /* border: 1px solid black */
 }
 
 .container {
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr;
     height: 100vh;
     background-color: aliceblue;
@@ -28,4 +28,27 @@
     background-color: rgb(0, 174, 255);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    grid-template-rows: 1fr 2fr 3fr;
+}
+
+.searchbar {
+    grid-template-rows: 1fr 1fr;
+}
+
+.top_bar {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.top_left {
+    display: grid;
+}
+
+.top_right {
+    display: grid;
+}
+
+.bottom_bar {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
