--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@
 .header,
 .sidebar,
 .main-content,
-.searchbar {
+.searchbar,
+.top_bar,
+.top_left,
+.top_right,
+.bottom_bar,
+.bottom_left,
+.bottom_right {
     display: grid;
 }
 
@@ -22,6 +28,76 @@
     background-color: white;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    padding: 20px 40px;
+    grid-template-rows: 1fr 2fr;
+    gap: 20px;
+}
+
+.top_bar {
+    grid-template-columns: 2fr 1fr;
+    gap: 200px;
+
+}
+
+.top_left {
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 25px 1fr;
+    gap: 20px;
+}
+
+input {
+    border: none;
+    background-color: aliceblue;
+    border-radius: 50px;
+    height: 30px;
+}
+
+.top_right {
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 25px 50px 1fr;
+    gap: 25px;
+}
+
+.bottom_bar {
+    grid-template-columns: 2fr 1fr;
+}
+
+.bottom_left {
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 100px 1fr;
+    gap: 15px;
+}
+
+.profile_name {
+    display: grid;
+    gap: 5px;
+}
+
+p {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.buttons {
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+button {
+    border: none;
+    border-radius: 50px;
+    background-color: rgb(0, 174, 255);
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    height: 45px;
+    width: 120px;
 }
 
 .sidebar {
@@ -29,26 +105,4 @@
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     grid-template-rows: 1fr 2fr 3fr;
-}
-
-.searchbar {
-    grid-template-rows: 1fr 1fr;
-}
-
-.top_bar {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-.top_left {
-    display: grid;
-}
-
-.top_right {
-    display: grid;
-}
-
-.bottom_bar {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
 }
