--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 .container,
@@ -105,4 +106,33 @@ button {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     grid-template-rows: 1fr 2fr 3fr;
+    color: white;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.filter_white {
+    filter: brightness(0) invert(1);
+}
+
+.dash_title {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    gap: 15px;
+    align-items: center;
+}
+
+ul {
+    display: grid;
+    list-style: none;
+    gap: 15px;
+}
+
+li {
+    display: grid;
+    grid-template-columns: 25px 1fr;
+    align-items: center;
+    gap: 15px
 }
