--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ input {
     gap: 5px;
 }
 
-p {
+.profile_name p {
     font-size: 16px;
     font-weight: bold;
 }
@@ -136,3 +136,4 @@ li {
     align-items: center;
     gap: 15px
 }
+
