--- a/style.css
+++ b/style.css
@@ -6,22 +6,31 @@
 
 .container,
 .header,
+.profile_name,
+.buttons,
 .sidebar,
+.dash_title,
 .main-content,
+.side_wrapper,
 .searchbar,
 .top_bar,
 .top_left,
 .top_right,
 .bottom_bar,
 .bottom_left,
-.bottom_right {
+.bottom_right,
+ul,
+li,
+.main_titles,
+.projects,
+.card,
+.icons {
     display: grid;
 }
 
 .container {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr;
-    height: 100vh;
     background-color: aliceblue;
 }
 
@@ -73,7 +82,6 @@ input {
 }
 
 .profile_name {
-    display: grid;
     gap: 5px;
 }
 
@@ -85,7 +93,6 @@ input {
 .buttons {
     justify-content: center;
     align-items: center;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
 }
@@ -118,22 +125,59 @@ button {
 }
 
 .dash_title {
-    display: grid;
     grid-template-columns: 50px 1fr;
     gap: 15px;
     align-items: center;
 }
 
 ul {
-    display: grid;
     list-style: none;
     gap: 15px;
 }
 
 li {
-    display: grid;
     grid-template-columns: 25px 1fr;
     align-items: center;
     gap: 15px
 }
 
+.main_titles {
+    font-size: 21px;
+    font-weight: bold;
+}
+
+.main-content {
+    grid-template-columns: 2fr 1fr;
+}
+
+.projects {
+    grid-template-rows: 20px 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    gap: 30px;
+}
+
+.projects .main_titles {
+    grid-column: 1 / 3;
+    line-height: 60px;
+}
+
+.card {
+    background-color: white;
+    background-image: linear-gradient(to right, orange 15px, transparent 15px);
+    height: 250px;
+    border-radius: 15px;
+    padding: 30px;
+    grid-template-rows: 30px 1fr 30px;
+    grid-template-columns: 2fr 1fr;
+}
+
+.card h3,
+.card p {
+    grid-column: 1 / 3;
+}
+
+.icons {
+    grid-column: 2 / 3;
+    grid-template-columns: repeat(3, 1fr);
+}
