--- a/style.css
+++ b/style.css
@@ -154,14 +154,14 @@ li {
 
 .main-content {
     grid-template-columns: 2fr 1fr;
-    padding: 20px;
-    gap: 30px;
+    padding-right: 50px;
 }
 
 .projects {
     grid-template-rows: 20px 1fr;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
+    padding: 20px;
 }
 
 .projects .main_titles {
