--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 .sidebar,
 .dash_title,
 .main-content,
+.main_card_wrapper,
+.projects,
 .side_wrapper,
 .searchbar,
 .top_bar,
@@ -29,13 +31,15 @@ li,
 .ann_wrapper,
 .ann_card,
 .line,
-.trending {
+.trending,
+.trend_wrapper,
+.trend_card {
     display: grid;
 }
 
 .container {
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
     background-color: aliceblue;
 }
 
@@ -118,10 +122,12 @@ button {
     background-color: rgb(0, 174, 255);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    grid-template-rows: 1fr 2fr 3fr;
+    grid-template-rows: 50px 1fr 3fr;
     color: white;
     padding-left: 25px;
     padding-right: 25px;
+    padding-top: 20px;
+    gap: 50px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -132,8 +138,11 @@ button {
 
 .dash_title {
     grid-template-columns: 50px 1fr;
-    gap: 15px;
-    align-items: center;
+    gap: 15px; 
+}
+
+.dash_title h2{
+    line-height: 50px;
 }
 
 ul {
@@ -155,12 +164,11 @@ li {
 .main-content {
     grid-template-columns: 2fr 1fr;
     padding-right: 50px;
+    padding-bottom: 50px;
 }
 
 .projects {
-    grid-template-rows: 20px 1fr;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    grid-template-rows: 50px 1fr;
     padding: 20px;
 }
 
@@ -169,10 +177,15 @@ li {
     line-height: 60px;
 }
 
+.main_card_wrapper {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+
 .card {
     background-color: white;
     background-image: linear-gradient(to right, orange 15px, transparent 15px);
-    height: 250px;
     border-radius: 15px;
     padding: 30px;
     grid-template-rows: 30px 1fr 30px;
@@ -191,12 +204,13 @@ li {
 }
 
 .side_wrapper {
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr;
+    padding: 20px;
+    gap: 30px;
 }
 
 .announcements {
-    grid-template-rows: 40px 1fr;
-    gap: 30px;
+    grid-template-rows: 50px 1fr;
 }
 
 .ann_wrapper {
@@ -218,12 +232,24 @@ li {
 
 .announcements > .main_titles,
 .trending > .main_titles {
-    padding-top: 20px;
     line-height: 60px;
 }
 
 .trending {
-    /* box-shadow: 2px 4px 5px lightgray;
+    grid-template-rows: 50px 1fr;
+}
+
+.trend_wrapper {
+    grid-template-rows: repeat(4, 1fr);
     background-color: white;
-    border-radius: 15px; */
+    border-radius: 15px;
+    box-shadow: 2px 4px 5px lightgray;
+    padding: 30px;
+    gap: 20px;
+}
+
+.trend_card {
+    grid-template-columns: 50px 1fr;
+    gap: 20px;
+    align-items: center;
 }
